--- a/.github/workflows/main_memento.yml
+++ b/.github/workflows/main_memento.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           python -m venv antenv
           source antenv/bin/activate
-          pip install -r azure_adls/requirements.txt
+          pip install -r requirements.txt
                 
       # By default, when you enable GitHub CI/CD integration through the Azure portal, the platform automatically sets the SCM_DO_BUILD_DURING_DEPLOYMENT application setting to true. This triggers the use of Oryx, a build engine that handles application compilation and dependency installation (e.g., pip install) directly on the platform during deployment. Hence, we exclude the antenv virtual environment directory from the deployment artifact to reduce the payload size. 
       - name: Upload artifact for deployment jobs
@@ -63,9 +63,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_7AAD0CF7BD87446093B13B1BB29E654B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4F8AD838206D4B0091C0AE0C37C58612 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F7C893E5B6B34B33B7810B6C52351981 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_730FD4291FBC457995F35FE02FA8D3F3 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D6E27701632B4EFF9106517EB4EEA721 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F76E59E61341408FB3FAEFCE001E369A }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
@@ -73,6 +73,4 @@ jobs:
         with:
           app-name: 'memento'
           slot-name: 'Production'
-
           
-
